// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiIcon is rendered 1`] = `
<svg
  aria-label="aria-label"
  class="kuiIcon testClass1 testClass2 kuiIcon--medium"
  data-test-subj="test subject string"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size large 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--large"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size medium 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size original 1`] = `
<svg
  class="kuiIcon kuiIcon--basic"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size xLarge 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--xLarge"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size xxLarge 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--xxLarge"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders type apmApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    apm app icon
  </title>
  <use
    href="#app_apm"
  />
</svg>
`;

exports[`KuiIcon renders type apps 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    apps icon
  </title>
  <use
    href="#apps"
  />
</svg>
`;

exports[`KuiIcon renders type arrowDown 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    arrow down icon
  </title>
  <use
    href="#arrow_down"
  />
</svg>
`;

exports[`KuiIcon renders type arrowLeft 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    arrow left icon
  </title>
  <use
    href="#arrow_left"
  />
</svg>
`;

exports[`KuiIcon renders type arrowRight 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    arrow right icon
  </title>
  <use
    href="#arrow_right"
  />
</svg>
`;

exports[`KuiIcon renders type arrowUp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    arrow up icon
  </title>
  <use
    href="#arrow_up"
  />
</svg>
`;

exports[`KuiIcon renders type bolt 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    bolt icon
  </title>
  <use
    href="#bolt"
  />
</svg>
`;

exports[`KuiIcon renders type boxesHorizontal 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    boxes horizontal icon
  </title>
  <use
    href="#boxes_horizontal"
  />
</svg>
`;

exports[`KuiIcon renders type boxesVertical 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    boxes vertical icon
  </title>
  <use
    href="#boxes_vertical"
  />
</svg>
`;

exports[`KuiIcon renders type brush 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    brush icon
  </title>
  <use
    href="#brush"
  />
</svg>
`;

exports[`KuiIcon renders type bullseye 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    bullseye icon
  </title>
  <use
    href="#bullseye"
  />
</svg>
`;

exports[`KuiIcon renders type check 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    check icon
  </title>
  <use
    href="#check"
  />
</svg>
`;

exports[`KuiIcon renders type clock 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    clock icon
  </title>
  <use
    href="#clock"
  />
</svg>
`;

exports[`KuiIcon renders type console 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    console icon
  </title>
  <use
    href="#console"
  />
</svg>
`;

exports[`KuiIcon renders type controlsHorizontal 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    controls horizontal icon
  </title>
  <use
    href="#controls_horizontal"
  />
</svg>
`;

exports[`KuiIcon renders type controlsVertical 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    controls vertical icon
  </title>
  <use
    href="#controls_vertical"
  />
</svg>
`;

exports[`KuiIcon renders type cross 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    cross icon
  </title>
  <use
    href="#cross"
  />
</svg>
`;

exports[`KuiIcon renders type dashboardApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    dashboard app icon
  </title>
  <use
    href="#app_dashboard"
  />
</svg>
`;

exports[`KuiIcon renders type devToolsApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    dev tools app icon
  </title>
  <use
    href="#app_devtools"
  />
</svg>
`;

exports[`KuiIcon renders type discoverApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    discover app icon
  </title>
  <use
    href="#app_discover"
  />
</svg>
`;

exports[`KuiIcon renders type document 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    document icon
  </title>
  <use
    href="#document"
  />
</svg>
`;

exports[`KuiIcon renders type dot 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    dot icon
  </title>
  <use
    href="#dot"
  />
</svg>
`;

exports[`KuiIcon renders type fullScreen 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    full screen icon
  </title>
  <use
    href="#full_screen"
  />
</svg>
`;

exports[`KuiIcon renders type gear 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    gear icon
  </title>
  <use
    href="#gear"
  />
</svg>
`;

exports[`KuiIcon renders type graphApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    graph app icon
  </title>
  <use
    href="#app_graph"
  />
</svg>
`;

exports[`KuiIcon renders type grid 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    grid icon
  </title>
  <use
    href="#grid"
  />
</svg>
`;

exports[`KuiIcon renders type help 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    help icon
  </title>
  <use
    href="#help"
  />
</svg>
`;

exports[`KuiIcon renders type link 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    link icon
  </title>
  <use
    href="#link"
  />
</svg>
`;

exports[`KuiIcon renders type list 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    list icon
  </title>
  <use
    href="#list"
  />
</svg>
`;

exports[`KuiIcon renders type listAdd 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    list add icon
  </title>
  <use
    href="#list_add"
  />
</svg>
`;

exports[`KuiIcon renders type lock 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    lock icon
  </title>
  <use
    href="#lock"
  />
</svg>
`;

exports[`KuiIcon renders type loggingApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logging app icon
  </title>
  <use
    href="#app_logging"
  />
</svg>
`;

exports[`KuiIcon renders type logoBeats 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo beats icon
  </title>
  <use
    href="#logo_beats"
  />
</svg>
`;

exports[`KuiIcon renders type logoCloud 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo cloud icon
  </title>
  <use
    href="#logo_cloud"
  />
</svg>
`;

exports[`KuiIcon renders type logoElasticStack 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo elastic stack icon
  </title>
  <use
    href="#logo_elastic_stack"
  />
</svg>
`;

exports[`KuiIcon renders type logoGmail 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo gmail icon
  </title>
  <use
    href="#logo_gmail"
  />
</svg>
`;

exports[`KuiIcon renders type logoKibana 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo kibana icon
  </title>
  <use
    href="#logo"
  />
</svg>
`;

exports[`KuiIcon renders type logoLogstash 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo logstash icon
  </title>
  <use
    href="#logo_logstash"
  />
</svg>
`;

exports[`KuiIcon renders type logoSlack 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo slack icon
  </title>
  <use
    href="#logo_slack"
  />
</svg>
`;

exports[`KuiIcon renders type logoWebhook 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo webhook icon
  </title>
  <use
    href="#logo_webhook"
  />
</svg>
`;

exports[`KuiIcon renders type logoXpack 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    logo xpack icon
  </title>
  <use
    href="#logo_xpack"
  />
</svg>
`;

exports[`KuiIcon renders type machineLearningApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    machine learning app icon
  </title>
  <use
    href="#app_ml"
  />
</svg>
`;

exports[`KuiIcon renders type mapMarker 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    map marker icon
  </title>
  <use
    href="#map_marker"
  />
</svg>
`;

exports[`KuiIcon renders type monitoringApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    monitoring app icon
  </title>
  <use
    href="#app_monitoring"
  />
</svg>
`;

exports[`KuiIcon renders type pencil 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    pencil icon
  </title>
  <use
    href="#pencil"
  />
</svg>
`;

exports[`KuiIcon renders type plusInCircle 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    plus in circle icon
  </title>
  <use
    href="#plus_in_circle"
  />
</svg>
`;

exports[`KuiIcon renders type search 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders type share 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    share icon
  </title>
  <use
    href="#share"
  />
</svg>
`;

exports[`KuiIcon renders type sortDown 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    sort down icon
  </title>
  <use
    href="#sort_down"
  />
</svg>
`;

exports[`KuiIcon renders type sortUp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    sort up icon
  </title>
  <use
    href="#sort_up"
  />
</svg>
`;

exports[`KuiIcon renders type starEmpty 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    star empty icon
  </title>
  <use
    href="#star_empty"
  />
</svg>
`;

exports[`KuiIcon renders type tear 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    tear icon
  </title>
  <use
    href="#tear"
  />
</svg>
`;

exports[`KuiIcon renders type timelionApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    timelion app icon
  </title>
  <use
    href="#app_timelion"
  />
</svg>
`;

exports[`KuiIcon renders type trash 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    trash icon
  </title>
  <use
    href="#trash"
  />
</svg>
`;

exports[`KuiIcon renders type user 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    user icon
  </title>
  <use
    href="#user"
  />
</svg>
`;

exports[`KuiIcon renders type visualizeApp 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    visualize app icon
  </title>
  <use
    href="#app_visualize"
  />
</svg>
`;

exports[`KuiIcon title defaults to a humanized version of the type 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    dashboard app icon
  </title>
  <use
    href="#app_dashboard"
  />
</svg>
`;

exports[`KuiIcon title is rendered 1`] = `
<svg
  class="kuiIcon kuiIcon--basic kuiIcon--medium"
>
  <title>
    a custom title
  </title>
  <use
    href="#search"
  />
</svg>
`;
